# HIVEPUBLIC

./: .gitignore  CHANGELOG.md  CLAUDE.md  HERMES_AUDIT_REPORT.md  HIVE_ADVISORY.md  HIVE_GRADUATION_ROADMAP.md  README.md  ROADMAP.md  START_HIVE.bat  START_HIVE.ps1  TODO_BRIDGE_POLISH.md  WORKING_STATE.md  plan.md
.claude/: PR_GUIDELINES.md  settings.json
.claude/hooks/: _state_utils.py  maintenance-check.py  pre-compact.py  precommit-doc-check.py  session-end.py  session-start.py
.claude/skills/: audit.md  principles.md
.github/workflows/: build-release.yml  ci.yml
HIVE/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
HIVE/desktop/src/: App.tsx  types.ts  useChat.ts
HIVE/desktop/src-tauri/: Cargo.toml  tauri.conf.json
HIVE/desktop/src-tauri/capabilities/: default.json
HIVE/desktop/src-tauri/src/: content_security.rs  discord_daemon.rs  download.rs  gguf.rs  hardware.rs  harness.rs  http_client.rs  magma.rs  main.rs  mcp_client.rs  mcp_server.rs  memory.rs  models.rs  orchestrator.rs  paths.rs  provider_stream.rs  provider_tools.rs  providers.rs  pty_manager.rs  routines.rs  security.rs  server.rs  slots.rs  state.rs  telegram_daemon.rs  tunnel.rs  types.rs  working_memory.rs  wsl.rs
HIVE/desktop/src-tauri/src/tools/: agent_tools.rs  discord_tools.rs  file_tools.rs  github_tools.rs  integration_tools.rs  log_tools.rs  memory_tools.rs  mod.rs  plan_tools.rs  scratchpad_tools.rs  specialist_tools.rs  system_tools.rs  telegram_tools.rs  web_tools.rs  worker_tools.rs  workspace_tools.rs
HIVE/desktop/src/__tests__/: useChat.test.ts
HIVE/desktop/src/components/: BrowseTab.tsx  ChatPane.tsx  ChatTab.tsx  LogsTab.tsx  McpTab.tsx  MemoryPanel.tsx  MemoryTab.tsx  (+11 more)
HIVE/docs/: AUDIT_LOG.md  CLI_BRIDGE_IMPROVEMENT_PLAN.md  E2E_TEST_PLAN.md  FULL_AUDIT.md  MULTI_PANE_ANALYSIS.md  PHASE10_NEXUS.md  PHASE4_IMPLEMENTATION.md  PRINCIPLE_LATTICE.md  STATE_OF_HIVE.md  TEST_HEALTH.md
HIVE/docs/archive/: README.md
claude-tools/: .mgreprc.yaml  README.md  setup.bat  setup.sh
(+29 files in other folders)
